src/objects/Survey_Report_Cards__c.object
<CustomObject>
    <description>Survey results for FCIC closed case surveys.</description>
    <fields>
        <fullName>Avaya_UCID__c</fullName>
        <description>Case Identifier</description>
        <inlineHelpText>Enter the Avaya UCID</inlineHelpText>
        <label>Avaya UCID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent who worked and closed the case related to the survey feedback.</description>
        <inlineHelpText>The agent who worked and closed the case related to the survey feedback.</inlineHelpText>
        <label>Case Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Date_Time__c</fullName>
        <description>The date and time the survey result was submitted.</description>
        <inlineHelpText>The date and time the survey result was submitted.</inlineHelpText>
        <label>Feedback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q10_Specific_Issue_Resolved__c</fullName>
        <description>Was the specific question resolved by the IS.</description>
        <label>Q10-Specific Issue Resolved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Still Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11_Contacted_Multiple_Times__c</fullName>
        <description>Did the citizen contact USA.gov more than once regarding this issue.</description>
        <label>Q11-Contacted Multiple Times</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, contacted more than once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, only contacted one time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12_Method_of_Contact__c</fullName>
        <description>What method of contact did the citizen use to resolve their issue.</description>
        <inlineHelpText>Please select all that applies</inlineHelpText>
        <label>Q12-Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Calling the Federal Information Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailing USA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatting with USA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching on the website USA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q12a_What_Other_Method__c</fullName>
        <description>What other method did the citizen use to contact the agency.</description>
        <label>Q12a-What Other Method?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q13_Contact_Another_Agency__c</fullName>
        <description>Did the citizen contact another government agency?</description>
        <label>Q13-Contact Another Agency?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q14_Who_Contact_Before__c</fullName>
        <description>Who did the citizen contact before contacting USA.gov.</description>
        <label>Q14-Who Contact Before?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q16_Ease_to_get_Question_Answered__c</fullName>
        <description>How easy was it to get an answer or information they needed from the IS.</description>
        <label>Q16-Ease to get Question Answered</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q17_Written_by_Computer_or_Person__c</fullName>
        <label>Q17-Written by Computer or Person</label>
        <picklist>
            <picklistValues>
                <fullName>By a Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By a Live Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q18_Live_in_the_US__c</fullName>
        <description>Does the person who contacted USA.gov live in the US.</description>
        <label>Q18-Live in the US?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I live in the United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I live in a different country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q19_Main_Contact_Reason__c</fullName>
        <description>What was the primary reason the citizen contacted USA.gov.</description>
        <label>Q19-Main Contact Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Business Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting elected officials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign travel by Americans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs and workplace issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law enforcement, justice system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parks, environment, energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement matters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Issues: loan guarantees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Issues: operating/setting up a business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Issues: import/export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Issues: business with the federal government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Issues: authentication of documents for business purposes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints: Complaints/inquiries about businesses including banks and auto dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints: investing (including Savings Bonds)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints: frauds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints: scams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer problems and complaints: insurance companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting elected officials: a variety of issues, primarily &quot;why&quot; questions related to (1) reasons for public policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting elected officials: a variety of issues, primarily &quot;why&quot; questions related to (2) foreign relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting elected officials: a variety of issues, primarily &quot;why&quot; questions related to (3) proposed legislation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting elected officials: a variety of issues, primarily &quot;why&quot; questions related to (4) copies of laws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign travel by Americans: leaving the US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q19a_Contact_Reason_Comment__c</fullName>
        <description>The citizens comment on the &apos;Other&apos; reason for contacting USA.gov</description>
        <label>Q19a-Contact Reason Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Amount_of_Personal_Effort__c</fullName>
        <description>The citizens amount of personal effort put forth to resolve their question or concern.</description>
        <label>Q15-Amount of Personal Effort</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1_Overall_Quality__c</fullName>
        <description>The overall quality the citizen experienced.</description>
        <label>Q1-Overall Quality?</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q20_Placed_on_Hold__c</fullName>
        <description>Did the Information Specialist place you on hold at any time during your call?</description>
        <inlineHelpText>Did the Information Specialist place you on hold at any time during your call?</inlineHelpText>
        <label>Q20-Placed on Hold?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q21_How_You_Heard_About_USA_GOV_Tel__c</fullName>
        <description>How did you hear about USA.GOV’s telephone 
service? Was it from…? SELECT AS MANY AS APPLY</description>
        <inlineHelpText>SELECT AS MANY AS APPLY</inlineHelpText>
        <label>Q21-How You Heard About  USA.GOV Tel</label>
        <picklist>
            <picklistValues>
                <fullName>USA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by a government agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The paper phone book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q21a_Other_Ways_Heard_USA_GOV_Tel__c</fullName>
        <description>Other Ways You Heard About USA.GOV Telephone Service</description>
        <inlineHelpText>Please enter other ways through which you heard USA.GOV Telephone Service not listed</inlineHelpText>
        <label>Q21a-Other Ways Heard USA.GOV Tel</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21b_Other__c</fullName>
        <description>This field is for Other (value 66) response from Q21B</description>
        <inlineHelpText>This field is for Other (value 66) response from Q21B</inlineHelpText>
        <label>Q21b - Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q21b__c</fullName>
        <description>What specifically were you calling about in regards to (Q21 CALL REASON)?</description>
        <inlineHelpText>What specifically were you calling about in regards to (Q21 CALL REASON)?</inlineHelpText>
        <label>Q21b-what were you calling about (Q21)?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q22_Call_You_to_Discuss_Open_Issues__c</fullName>
        <description>Would you like the Federal Information 
Line Customer Service to call you
 back to further discuss your unresolved
 question or concern?</description>
        <inlineHelpText>Would you like a call back to discuss unresolved problems?</inlineHelpText>
        <label>Q22-Call You to Discuss Open Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q23_Issues_to_Discuss_on_Call_Back__c</fullName>
        <description>&quot;Q23 To help address your needs when the
 Federal Information Line contacts you, 
 what specific issues would you like to discuss?&quot;</description>
        <inlineHelpText>What specific issues would you like to discuss when you are called back? Please key in your response</inlineHelpText>
        <label>Q23-Issues to Discuss on Call Back</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Overall_Quality_Comment__c</fullName>
        <description>The citizens comments on the overall quality of their experience.</description>
        <label>Q2-Overall Quality Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Useful_Information__c</fullName>
        <description>How useful was the information provided to the citizen.</description>
        <label>Q3-Useful Information?</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_Likely_Use_USA_gov_Again__c</fullName>
        <description>How likely the citizen is to use USA.gov again in the future.</description>
        <label>Q4-Likely Use USA.gov Again?</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q5_Likely_Recommend_USA_gov__c</fullName>
        <description>How likely the citizen is to recommend USA.gov?</description>
        <label>Q5-Likely Recommend USA.gov?</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q6_Compared_to_Expectation__c</fullName>
        <description>How the citizens experience compared to their expectations.</description>
        <label>Q6-Compared to Expectations?</label>
        <picklist>
            <picklistValues>
                <fullName>Better than what you expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About the same as what you expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worse than what you expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7_Process_of_Getting_a_Response__c</fullName>
        <description>How the citizen rates the process in getting a response from USA.gov.</description>
        <label>Q7-Process of Getting a Response?</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7a_Waiting_Time_for_Specialist__c</fullName>
        <description>The rating of the length of time spent waiting to speak to an Information Specialist</description>
        <inlineHelpText>Rate the length of time spent waiting to speak to an Information Specialist</inlineHelpText>
        <label>Q7a-Waiting Time for Specialist</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7b_Total_amnt_of_time_spent_on_phone__c</fullName>
        <label>Q7b-Total amnt of time spent on phone</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q8_Got_Information_Directly__c</fullName>
        <label>Q8-Got Information Directly?</label>
        <picklist>
            <picklistValues>
                <fullName>They told me the information during the chat session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>They told me the information in the e-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>They told me the information during the phone session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>They told me how to get the information myself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both, they told me the information during the chat session and how to get the information myself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both, they told me the information in the email and how to get the information myself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both, they told me the information during the call and how to get the information myself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9a_IS_Agent_Overall_Quality__c</fullName>
        <description>The citizens rating of the IS overall quality.</description>
        <label>Q9a-IS Agent Overall Quality</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>